--- a/Noticias Cidade/estilos/estilo.css
+++ b/Noticias Cidade/estilos/estilo.css
@@ -1,11 +1,60 @@
-
+/*Inicio do site */
     body {
          background-repeat: repeat-x;
       }
    
       .fototopo{
-          float: right;
           margin-right: 225px;
+          position: relative;
+          left: 280px;
+          top: -260px;
       }
 
+/*nome Cidade Noticias*/
+.nomeLogo{
+    position: absolute;
+    left: 260px;
+    top: 20px;
+}
+
+/*Conteudo*/
+#container{
+    width: 100%;
+    height: 800px;
+    border:1px solid red;
+    float: left;
+    margin-top: 260px;
+}
+.conteudo1{
+    width: 13%;
+    height: 800px;
+    border: 1px solid red;
+    float: left;
+    margin-left: 250px;
+    margin-right: 2%;
+}
+.conteudo2{
+    width: 19%;
+    height: 800px;
+    border: 1px solid red;
+    float: left;
+    margin-right: 2%;
+  
+}
+.conteudo3{
+    width: 19%;
+    height: 600px;
+    border: 1px solid red;
+    float: left;
+    margin-top: -185px;
+    
+}
+
+/*Dentro do conteudo*/
+h2{
+    background-color: rgb(59, 59, 255);
+}
+h3{
+    background-color: red;
+}
 
